# advent_rust

./: .gitignore  README.md
advent-2015/advent_rest/: Cargo.toml  input.txt  test.py
advent-2015/advent_rest/src/: common.rs  main.rs  q16.rs  q17.rs  q18.rs  q19.rs
advent-2015/advent_rest/src/q12/: mod.rs
advent-2015/advent_rest/src/q13/: mod.rs  mod1.rs  mods.rs
advent-2015/advent_rest/src/q14/: mod.rs
advent-2015/advent_rest/src/q15/: mod-s.rs  mod.rs  mod1.rs
advent-2015/q11/: Cargo.toml
advent-2015/q2/: Cargo.toml
advent-2015/q20/: Cargo.toml
advent-2015/q21/: Cargo.toml
advent-2015/q22/: Cargo.toml
advent-2015/q23/: Cargo.toml
advent-2015/q24/: Cargo.toml
advent-2015/q8/: test.py  (+1 more)
advent-2016/: Cargo.toml  q20.txt  q7.txt  q8.txt  test.py
advent-2016/src/: common.rs  main.rs  q1.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs  q16.rs  q17.rs  q18.rs  q19.rs  q2.rs  q20.rs  q21.rs  q22.rs  q23.rs  q24.rs  q25.rs  q3.rs  q4.rs  q5.rs  q6.rs  q7.rs  q8.rs  q9.rs
advent-2017/: Cargo.toml  cp  q25.txt  sample.rs
advent-2018/: Cargo.toml  test.py
advent-2019/: Cargo.toml  test.py
advent-2020/: Cargo.toml  fib.py  test.py
advent-2021/: cmp_str.c  cmp_str.s  cmp_str1.s  hashmap.c  hashmap.h  hello.c  help.txt  lib.c  lib.h  lib.s  p21.py  play.c  play.py  play.s  ptr_vector.c  ptr_vector.h  q1.c  q10.c  q11.c  q12.c  q13.c  q14.c  q14.s  q15-1.c  q15-2023.c  q15.c  q15.py  q15f.c  q16.c  q17.c  q18.c  q19-1.py  q19.c  q19.py  q2.c  q20.c  q21.c  q22.c  q23.py  q24.py  (+15 more)
advent-2024/: CMakeLists.txt  play.cpp  play.py  simulation.txt
(+259 files in other folders)
