[package]
name = "advent-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = "0.4.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
md5 = "0.7.0"
mockall = "0.11.3"
mockall_double = "0.3.0"
regex = "1.7.1"
